--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.duowan.pathmeasuredemo">
+        package="com.duowan.pathmeasuredemo">
 
     <application
             android:allowBackup="true"
@@ -14,18 +14,22 @@
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Demo1"/>
-        <activity android:name=".Demo2"/>
-        <activity android:name=".Demo3"/>
-        <activity android:name=".Demo4"/>
-        <activity android:name=".Demo5"/>
-        <activity android:name=".Demo6"/>
-        <activity android:name=".Demo7"/>
+        <activity android:name=".Demo1" />
+        <activity android:name=".Demo2" />
+        <activity android:name=".Demo3" />
+        <activity android:name=".Demo4" />
+        <activity android:name=".Demo5" />
+        <activity android:name=".Demo6" />
+        <activity android:name=".Demo7" />
+        <activity
+                android:name=".Demo8"
+                android:configChanges="orientation|screenSize|keyboard"
+                android:screenOrientation="landscape" />
     </application>
 
 </manifest>
